force-app/main/default/objects/R360_Learning_Achievement__c/R360_Learning_Achievement__c.object-meta.xml
<CustomObject><deploymentStatus>Deployed</deploymentStatus><description>Learning Gateway achievement mapped to a Resource 360 resource and optional capability.</description><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSharing>true</enableSharing><externalSharingModel>Private</externalSharingModel><label>Resource 360 Learning Achievement</label><nameField><displayFormat>LRN-{00000}</displayFormat><label>Achievement Number</label><type>AutoNumber</type></nameField><pluralLabel>Resource 360 Learning Achievements</pluralLabel><sharingModel>Private</sharingModel><visibility>Public</visibility></CustomObject>