force-app/main/default/objects/R360_Learning_Achievement__c/fields/Achievement_ID__c.field-meta.xml
<CustomField><fullName>Achievement_ID__c</fullName><caseSensitive>false</caseSensitive><externalId>true</externalId><label>Achievement ID</label><length>120</length><required>true</required><type>Text</type><unique>true</unique></CustomField>