force-app/main/default/objects/R360_Learning_Achievement__c/fields/Capability__c.field-meta.xml
<CustomField><fullName>Capability__c</fullName><deleteConstraint>SetNull</deleteConstraint><label>Capability</label><referenceTo>Capability__c</referenceTo><relationshipLabel>Learning Achievements</relationshipLabel><relationshipName>Learning_Achievements</relationshipName><type>Lookup</type></CustomField>