force-app/main/default/objects/R360_Learning_Achievement__c/fields/Completed_On__c.field-meta.xml
<CustomField><fullName>Completed_On__c</fullName><label>Completed On</label><required>true</required><type>Date</type></CustomField>