force-app/main/default/objects/R360_Learning_Achievement__c/fields/Course_Name__c.field-meta.xml
<CustomField><fullName>Course_Name__c</fullName><label>Course Name</label><length>255</length><required>true</required><type>Text</type></CustomField>