force-app/main/default/objects/R360_Learning_Achievement__c/fields/Provider__c.field-meta.xml
<CustomField><fullName>Provider__c</fullName><label>Provider</label><length>120</length><required>true</required><type>Text</type></CustomField>