force-app/main/default/objects/R360_Learning_Achievement__c/fields/Resource__c.field-meta.xml
<CustomField><fullName>Resource__c</fullName><deleteConstraint>Restrict</deleteConstraint><label>Resource</label><referenceTo>Resource__c</referenceTo><relationshipLabel>Learning Achievements</relationshipLabel><relationshipName>Learning_Achievements</relationshipName><required>true</required><type>Lookup</type></CustomField>