force-app/main/default/objects/R360_Learning_Achievement__c/fields/Source_Last_Sync__c.field-meta.xml
<CustomField><fullName>Source_Last_Sync__c</fullName><label>Source Last Sync</label><required>true</required><type>DateTime</type></CustomField>